correct loading video from file

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,24 +15,54 @@
         android:textSize="24sp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="275dp"
         android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/videoFileButton"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Load video from file" />
 
         <Button
             android:id="@+id/exampleVideoButton"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Load example video" />
+
+        <Button
+            android:id="@+id/audioFileButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Load audio from file" />
+
+        <Button
+            android:id="@+id/exampleAudioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Load example audio" />
+
+        <Button
+            android:id="@+id/internetVideoButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Load video from internet" />
+
+        <Button
+            android:id="@+id/internetAudioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Load audio from internet" />
+
     </LinearLayout>
 
 </FrameLayout>
