--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,11 +12,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="12dp"
         android:text="Audio-Video Player"
-        android:textSize="24sp" />
+        android:textColor="#000000"
+        android:textSize="34sp" />
 
     <LinearLayout
         android:layout_width="275dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:orientation="vertical">
@@ -26,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:backgroundTint="@color/buttonColor"
             android:text="Load video from file" />
 
         <Button
@@ -33,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:backgroundTint="@color/buttonColor"
             android:text="Load example video" />
 
         <Button
@@ -40,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:backgroundTint="@color/buttonColor"
             android:text="Load audio from file" />
 
         <Button
@@ -47,6 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:backgroundTint="@color/buttonColor"
             android:text="Load example audio" />
 
         <Button
@@ -54,6 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="80dp"
+            android:backgroundTint="@color/buttonColor"
             android:text="Load video from internet" />
 
         <Button
@@ -61,8 +68,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:backgroundTint="@color/buttonColor"
             android:text="Load audio from internet" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="150dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:text="Place For link:"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:hint="Link..."
+            android:inputType="textPersonName"
+            android:textColor="#000000" />
     </LinearLayout>
 
 </FrameLayout>
